testcases/error/invalid_clock.veryl
module invalid_clock {
    let a: logic<10> = 0;

    always_ff (a) {}
}
